2000-04-03  Roland McGrath  <roland@baalperazim.frob.com>

	* glue-include/asm/byteorder.h: Include <hurd.h> early on,
	to get the things it #include's that need __BYTE_ORDER to work.

2000-03-17  Thomas Bushnell, BSG  <tb@mit.edu>

	* main.c (arrange_shutdown_notification): Don't use MAKE_SEND in
	Hurd RPC.

2000-03-17  Roland McGrath  <roland@baalperazim.frob.com>

	* io-ops.c (S_io_reauthenticate): Use ports_get_send_right.

2000-02-13  Roland McGrath  <roland@baalperazim.frob.com>

	* main.c (main): Call configure_device on loopback_dev.
	* linux-src/net/ipv4/devinet.c (configure_device): Call
	dev_change_flags with IFF_UP flag.

2000-02-06  Roland McGrath  <roland@baalperazim.frob.com>

	* socket.c (make_sock_user): Take new argument CONSUME.
	* pfinet.h: Update decl.
	* io-ops.c (S_io_reauthenticate, S_io_restrict_auth, S_io_duplicate):
	Callers changed, these all pass false.
	* socket-ops.c (S_socket_create, S_socket_accept): Callers changed,
	these ones pass true.

	* glue-include/linux/socket.h (memcpy_fromiovec): Update *IOV to
	consume bytes copied from the available buffer.
	(memcpy_tokerneliovec): Likewise.
	(memcpy_toiovec): Just call memcpy_tokerneliovec.

2000-02-05  Roland McGrath  <roland@baalperazim.frob.com>

	* linux-src (many files): Merge Linux 2.2.13 and 2.2.14 code.
	* glue-include/linux/mm.h (PAGE_SIZE, num_physpages): New macros.
	(__get_free_pages): New inline function.

2000-02-04  Roland McGrath  <roland@baalperazim.frob.com>

	* options.c (parse_opt): New code to set the default gateway using
	fib_new_table and the tb_insert/tb_delete callbacks.

	* options.c (parse_opt): Take global_lock while applying changes.
	* main.c (main): Unlock global_lock before calling argp_parse.

	* options.c (struct parse_interface): Use uint32_t for the IP
	address members.

	* linux-src/net/ipv4/devinet.c [_HURD_] (inquire_device): New function.
	* options.c: Declare it.
	(trivfs_append_args): Use inquire_device for --address and --netmask.